<resources>
    <string name="app_name">MyBole</string>
    <string name="action_settings">Settings</string>
    <string name="skip_button">手机一键登录</string>

    <!--引导页01-->
    <string name="intr01_title">搏乐，微信营销APP</string>
    <string name="intr01_subtitle">他们都在抢先体验</string>

    <!--引导页02-->
    <string name="intr02_title">三分钟创建一个营销活动</string>
    <string name="intr02_subtitle">选择游戏，设置奖品</string>

    <!--引导页03-->
    <string name="intr03_title">发送给你的粉丝们</string>
    <string name="intr03_subtitle">在微信、朋友圈、搏乐公众号上引爆你的活动</string>

    <!--引导页04-->
    <string name="intr04_title">活动效果实时掌握</string>
    <string name="intr04_subtitle">活动访问数量一目了然</string>

    <string name="homepage_grid_create_activity">创建活动</string>
    <string name="homepage_grid_my_activity">我的活动</string>
    <string name="homepage_grid_total_staticis">统计</string>
    <string name="homepage_grid_verify_code">验证</string>

    <string name="login_hint_telphone">请输入手机号码</string>
    <string name="login_hint_captcha">请输入验证码</string>
    <string name="login_btn_txt_captcha">获取验证码</string>
    <string name="login_btn_voice_captcha">没收到?</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_policy">用户协议</string>

    <!--来自OSChina-->
    <string name="loading">加载中…</string>
    <string name="loading_no_more">没有更多了喲.</string>

    <!--来自crop-->
    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>

    <string name="description_cropped_image">Cropped image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>

    <!--来自xlist-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!--来自scan-->
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>

</resources>
